.NET 10のLTSリリースに関する表現を改善し、パフォーマンスの説明を具体化

--- a/articles/085011c656f22e.md
+++ b/articles/085011c656f22e.md
@@ -14,7 +14,7 @@ published: false
 
 ## 🎯 .NET 10はLTS（長期サポート版）です
 
-.NET 10は**LTS（Long Term Support）**リリースです。これは本番環境での採用を検討している方にとって重要なポイントです。
+.NET 10は **LTS（Long Term Support）** リリースです。これは本番環境での採用を検討している方にとって重要なポイントです。
 
 ### .NETのサポートポリシー
 
@@ -906,13 +906,13 @@ app.MapDelete("/users/{id:int}", async (int id, UserService service) =>
 
 ## まとめ
 
-.NET 10は**LTS（長期サポート版）**として、本番環境での採用に最適なリリースです。
+.NET 10は **LTS（長期サポート版）** として、本番環境での採用に最適なリリースです。
 
 ### .NET 10の主なハイライト
 
 | カテゴリ | 主な改善 |
 |---------|----------|
-| 🚀 **パフォーマンス** | .NET 8比で15%高速化、93%メモリ削減 |
+| 🚀 **パフォーマンス** | JIT最適化、LINQ高速化、メモリ管理改善など多数 |
 | 💎 **C# 14** | 拡張メンバー、fieldキーワード、Null条件付き割り当て |
 | 🔐 **セキュリティ** | Blazorパスキー認証サポート |
 | ✅ **開発体験** | Minimal APIモデル検証、Source Generator検証 |
