画像のキャプションを日本語に修正

--- a/articles/068f4ecac2d081.md
+++ b/articles/068f4ecac2d081.md
@@ -60,7 +60,7 @@ AIエージェント「ほのか」からの応答：
 > - **風**: 北〜北西の風で、場所によってはやや強まることがあるよ〜🌬️
 > - **アドバイス**: 午前中に外出するなら折りたたみ傘があると安心、午後はコートで十分かもだよ〜☂️👕
 
-![](/images/tenki_1.png)
+![天気](/images/tenki_1.png)
 
 
 このようなユーザーとAIエージェント間のやり取りが、OpenTelemetryを通じてApplication Insightsに記録されます。次のセクションでは、実際にどのようなテレメトリデータが収集されているかを見ていきましょう！🔍📈
