Webアクセシビリティに関する記事の内容を更新し、表現を明確化しました

--- a/articles/d172a4df770230.md
+++ b/articles/d172a4df770230.md
@@ -8,9 +8,9 @@ published: false
 
 ## はじめに
 
-なぜ、Webアクセシビリティについてこれほどまでにしつこく続けるのか？
+なぜ、Webアクセシビリティについてこれほどまでにしつこく発信し続けるのか？
 
-Web開発者をやっている立場として日々感じることがあります。それは、**五体満足であることを前提にして構築されているシステムがあまりにも多い**ということです。
+Web開発者として日々感じることがあります。それは、**「今の自分」が健康であることを前提にして構築されているシステムがあまりにも多い**ということです。
 
 ## 「今使える」は永遠ではない
 
@@ -49,7 +49,7 @@ Webサービスが使えないということは、**社会参加の機会を奪
 
 私たちは、自分がいつまでも今の状態でいられると無意識に思い込んでいませんか？
 
-- 🤕 **病気** — 糖尿病による視力低下、突発性難聴、脳卒中後の運動機能障害...
+- 🤕 **病気** — 糖尿病網膜症による視力低下、突発性難聴、脳卒中後の片麻痺...
 - 🦴 **ケガ** — 骨折でマウスが握れない、腱鞘炎でキーボードが打てない...
 - 😵 **一時的な不調** — 片頭痛で画面が見づらい、疲労で細かい文字が読めない...
 - 👴 **加齢** — 老眼、聴力の低下、反応速度の低下...
@@ -92,9 +92,9 @@ Webサービスが使えないということは、**社会参加の機会を奪
 
 ## 法的背景から見るアクセシビリティ対応の必要性
 
-日本では「**障害者差別解消法**」によって、合理的配慮の提供が求められています。
+日本では「**障害者差別解消法**」（平成25年法律第65号）によって、合理的配慮の提供が求められています。
 
-また、**JIS X 8341-3**はWCAG 2.0/2.1と整合しており、公共機関などでの対応基準として参照されています。
+また、**JIS X 8341-3:2016**は国際規格ISO/IEC 40500:2012およびWCAG 2.0と技術的に同一内容であり、公共機関などでの対応基準として参照されています。なお、W3Cでは2023年10月にWCAG 2.2が勧告されており、最新のガイドラインへの対応も視野に入れることが推奨されます。
 
 :::message
 2021年5月の法改正（令和3年法律第56号）により、民間事業者においても合理的配慮の提供が**義務化**され、**2024年4月1日に施行**されました。
@@ -123,7 +123,7 @@ Webサービスにおいては、主に以下の2つの観点があります：
 
 - 🖥️ スクリーンリーダーで読み上げ可能なHTML構造の実装
 - ⌨️ キーボードのみで全機能を操作可能にする
-- 🎨 WCAG基準を満たすコントラスト比の確保（4.5:1以上）
+- 🎨 WCAG基準を満たすコントラスト比の確保（通常テキストは4.5:1以上、大きな文字は3:1以上）
 - 📝 画像への代替テキスト（alt属性）の付与
 - 🎥 動画コンテンツへの字幕・文字起こしの提供
 - 📱 レスポンシブデザインによる多様なデバイス対応
@@ -137,10 +137,10 @@ Webサービスにおいては、主に以下の2つの観点があります：
 
 #### JIS X 8341-3の位置づけ
 
-**JIS X 8341-3:2016**は、ウェブアクセシビリティの日本産業規格であり、以下の特徴があります：
+**JIS X 8341-3:2016**（正式名称：高齢者・障害者等配慮設計指針−情報通信における機器，ソフトウェア及びサービス―第3部：ウェブコンテンツ）は、ウェブアクセシビリティの日本産業規格であり、以下の特徴があります：
 
-- 📋 WCAG 2.0と技術的に同一内容
-- 🌏 国際規格ISO/IEC 40500:2012とも一致
+- 📋 **WCAG 2.0と技術的に同一内容**（W3C勧告、国際規格ISO、国内規格JISが完全に統一）
+- 🌏 国際規格ISO/IEC 40500:2012との一致規格
 - 🏛️ 公共機関のWebサイトでは対応が強く求められる基準
 
 総務省やウェブアクセシビリティ基盤委員会（WAIC）は、JIS X 8341-3に基づくPDCAサイクル（方針策定→制作→試験→改善）を推奨しています。
