タイトルを修正し、Microsoft Foundryに関する情報を更新。リレーサーバーの説明を明確化。

--- a/articles/4c5bef228c60b9.md
+++ b/articles/4c5bef228c60b9.md
@@ -1,5 +1,5 @@
 ---
-title: "M5Stack CoreS3 と Azure AI Foundry で音声アシスタント「スタックチャン AI」を作った話 — リレーサーバーで途切れ問題を解決する"
+title: "スタックチャンに向けた Microsoft Foundry 音声アシスタントの技術検証 — リレーサーバーで途切れ問題を解決する"
 emoji: "🤖"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["M5Stack", "ESP32", "AzureOpenAI", "dotnet", "IoT"]
@@ -8,9 +8,13 @@ published: false
 
 ## はじめに
 
-M5Stack CoreS3（ESP32-S3）と Azure AI Foundry の GPT Realtime API を組み合わせて、音声で会話できるロボットアシスタント「スタックチャン AI」を開発しました🔧
+スタックチャン（Stack-chan）は、M5Stack をベースにしたオープンソースの AI デスクトップロボットです。Kickstarter でのプロジェクトをきっかけに大きな注目を集めており、さまざまな音声アシスタント AI と組み合わせて使用できる点が大きな特徴です🤖
 
-Azure AI Foundry（旧 Azure OpenAI）が提供する GPT Realtime API は、音声入力をリアルタイムに受け取り、音声で応答を返す「speech in, speech out」型の対話を低レイテンシで実現できる API です。WebSocket 経由で 24kHz の PCM 音声をストリーミングし、GPT-4o ファミリーのモデルがリアルタイムに応答を生成します🎙️
+https://www.kickstarter.com/projects/m5stack/stackchan-the-first-co-created-open-source-ai-desktop-robot
+
+スタックチャンでは OpenAI API や Google Gemini など様々な音声 AI バックエンドが利用可能ですが、今回は Microsoft Foundry（旧 Azure AI Foundry）が提供する GPT Realtime API をバックエンドとして使いたいという要求から、M5Stack CoreS3（ESP32-S3）上での動作について技術検証を行いました🔧
+
+GPT Realtime API は音声入力をリアルタイムに受け取り、音声で応答を返す「speech in, speech out」型の対話を低レイテンシで実現できる API です。WebSocket 経由で 24kHz の PCM 音声をストリーミングし、GPT-4o ファミリーのモデルがリアルタイムに応答を生成します🎙️
 
 この記事では、ESP32 から Azure の Realtime API に直接アクセスした際に発生した「音声が途切れ途切れになる」問題と、それを中継サーバー（リレーサーバー）の導入によって解決したアーキテクチャについて、実装コードを交えながら解説します📝
 
@@ -22,10 +26,10 @@ Azure AI Foundry（旧 Azure OpenAI）が提供する GPT Realtime API は、音
 M5Stack CoreS3 (ESP32-S3)
     │  plain TCP (LAN内バイナリプロトコル)
     ▼
-リレーサーバー (PC / .NET 8)
+リレーサーバー (PC / .NET 10)
     │  WSS/TLS (Azure OpenAI Realtime API)
     ▼
-Azure AI Foundry — GPT Realtime API (gpt-realtime-mini)
+Microsoft Foundry — GPT Realtime API (gpt-realtime-mini)
 ```
 
 この構成に至るまでには、ESP32 から Azure に直接接続するアプローチを試み、実用上の大きな課題にぶつかるという過程がありました。以降では、その課題と解決策を順を追って説明します🔍
@@ -56,7 +60,7 @@ Azure AI Foundry — GPT Realtime API (gpt-realtime-mini)
 
 応答音声の途切れに加えて、音声認識（マイク入力のトランスクリプション）の精度も非常に悪いという問題がありました。こちらが話した内容が正しく認識されず、的外れな応答が返ってくることが頻発していました🤔
 
-この原因は、送信側でも同様の処理負荷が発生していたためと考えられます。マイクから取得した PCM 音声を Base64 にエンコードし、JSON に包んで TLS 暗号化して送信するという一連の処理に時間がかかり、音声チャンクの送信間隔が不均一になっていました。その結果、Azure 側が受け取る音声データにギャップが生じ、Whisper による音声認識の精度が著しく低下していたのです🎤
+この原因は、送信側でも同様の処理負荷が発生していたためと考えられます。マイクから取得した PCM 音声を Base64 にエンコードし、JSON に包んで TLS 暗号化して送信するという一連の処理に時間がかかり、音声チャンクの送信間隔が不均一になっていました。その結果、Azure 側が受け取る音声データにギャップが生じ、GPT-4o モデルによるネイティブの音声認識精度が著しく低下していたのです。なお、Realtime API ではモデルが音声を直接処理するため、音声入力の品質がそのまま認識精度に反映されます🎤
 
 ## リレーサーバーによる解決
 
@@ -214,7 +218,7 @@ void removeDCOffset(int16_t *buf, size_t n) {
 
 リレーサーバーの導入によって、音声の途切れ問題は完全に解消されました。ESP32 の処理が「Raw PCM の送受信のみ」に限定されたことで、CPU 負荷が大幅に低減し、マイク録音と音声再生が安定して動作するようになりました✅
 
-音声認識の精度も劇的に改善されました。音声チャンクが途切れなく一定間隔で Azure に到達するようになったため、Whisper モデルによるトランスクリプションが正確に機能するようになっています🎉
+音声認識の精度も劇的に改善されました。音声チャンクが途切れなく一定間隔で Azure に到達するようになったため、GPT-4o モデルによるネイティブの音声処理が正確に機能するようになっています🎉
 
 ESP32 のようなリソースが限られた組み込みデバイスで Azure OpenAI の Realtime API を活用する場合、TLS 暗号化やデータエンコーディングといった計算コストの高い処理を外部にオフロードするリレーサーバーパターンは非常に有効なアプローチです。特に音声ストリーミングのようにリアルタイム性が求められるユースケースでは、処理の分離がシステム全体の応答品質に直結します🌟
 
@@ -236,6 +240,8 @@ ESP32 のようなリソースが限られた組み込みデバイスで Azure O
 - [Azure OpenAI GPT Realtime API for speech and audio — Microsoft Learn](https://learn.microsoft.com/azure/ai-foundry/openai/how-to/realtime-audio?view=foundry-classic)
 - [Use the GPT Realtime API via WebSockets — Microsoft Learn](https://learn.microsoft.com/azure/ai-foundry/openai/how-to/realtime-audio-websockets?view=foundry-classic)
 - [GPT Realtime API クイックスタート — Microsoft Learn](https://learn.microsoft.com/azure/ai-foundry/openai/realtime-audio-quickstart?view=foundry-classic)
+- [Audio events reference（Realtime API イベントリファレンス）— Microsoft Learn](https://learn.microsoft.com/azure/ai-foundry/openai/realtime-audio-reference?view=foundry-classic)
 - [M5Unified ライブラリ — GitHub](https://github.com/m5stack/M5Unified)
 - [M5Stack CoreS3 製品ページ](https://docs.m5stack.com/en/core/CoreS3)
+- [Microsoft Foundry とは — Microsoft Learn](https://learn.microsoft.com/ja-jp/azure/ai-foundry/what-is-foundry?view=foundry-classic)
 - [FreeRTOS リファレンスマニュアル](https://www.freertos.org/Documentation/00-Overview)
